---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: ???
  Features:
    - Spidertron inventories now stay open when the spidertron becomes too far away from the player for normal interaction
    - When holding a spidertron remote, 'Shift + E' now opens the GUI of the connected spidertron (when not holding a connected remote, it still opens the current vehicle GUI)
    - 'Shift + Q' (Spidertron remote pipette) will now pick remote connected to the spidertron the player is currently driving if no spidertron is selected
  Bugfixes:
    - Fixed 'Shift + E' opening the vehicle GUI instead of closing the current GUI for some GUIs
    - Fixed 'Shift + E' not closing the current GUI when not in a vehicle
    - Fixed crash in multiplayer when a passenger exits a spidertron that has no driver
    - FIxed 'Call last used spidertron' shortcut not toggling off when another player calls your spidertron
---------------------------------------------------------------------------------------------------
Version: 1.4.11
Date: 20 April 2021
  Bugfixes:
    - Fixed crash when spidertron with no equipment grid dies
    - Fixed 'Travelling Spidertron' causing item loss if another mod increases spidertron inventory size
---------------------------------------------------------------------------------------------------
Version: 1.4.10
Date: 14 April 2021
  Features:
    - 'Call last used spidertron' now sets the same follow offset every time it is used
    - 'Spidertron remote pipette' plays success and failure sounds
  Changes:
    - 'Shift + E' now closes the current GUI instead of immediately opening the vehicle GUI (it now behaves more like 'E')
---------------------------------------------------------------------------------------------------
Version: 1.4.9
Date: 13 April 2021
  Bugfixes:
    - Fixed crash when quick-toggling a spidertron in editor mode