@@ -10,6 +10,7 @@ spidertron_lib = require "scripts.spidertron_lib"
 require "scripts.hidden-spidertron"
 require "scripts.auto-sort"
 require "scripts.create-corpse"
+require "scripts.disconnect-remote"
 require "scripts.remote-pipette"
 require "scripts.open-inventory"
 require "scripts.pathfinder"
