@@ -9,7 +9,7 @@ spidertron-enhancements-recall-shortcut=Call last used spidertron
 [controls-description]
 spidertron-enhancements-use-alt-spidertron-remote=Used with spidertron remote to order the connected spidertron using the pathfinder.
 spidertron-enhancements-enter-vehicles=Result depends on whether you are in/near a vehicle or not and can be configured in mod settings.\n[color=red]Do not set to the same as the vanilla control [font=default-bold]Enter/leave vehicle[/font] (__CONTROL_STYLE_BEGIN____CONTROL__toggle-driving____CONTROL_STYLE_END__)[/color].
-spidertron-enhancements-spidertron-pipette=Picks a remote from your inventory that is connected to the currently selected spidertron and places it in your cursor.
+spidertron-enhancements-spidertron-pipette=Picks a remote from your inventory that is connected to the currently selected spidertron and places it in your cursor.\nIf no currently selected spidertron, picks a remote connected to the spidertron you are currently driving.
 spidertron-enhancements-open-vehicle-inventory=If holding a spidertron remote, opens the inventory of the connected spidertron.\nOtherwise, opens the inventory of the vehicle you are currently driving.
 
 [shortcut-name]
@@ -38,7 +38,7 @@ spidertron-enhancements-dummy-spidertron=Travelling __1__
 spidertron-enhancements-corpse=Spidertron corpse
 
 [item-description]
-spidertron-enhancements-spidertron-remote-append=__1__\n[font=default-semibold][color=255, 230, 192]When in cursor:\n  •   __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-open-vehicle-inventory____CONTROL_STYLE_END__ to open spidertron's inventory.[/color][/font]__2__
+spidertron-enhancements-spidertron-remote-append=__1__\n[font=default-semibold][color=255, 230, 192]When in cursor:\n  •   __CONTROL_STYLE_BEGIN____CONTROL__spidertron-enhancements-open-vehicle-inventory____CONTROL_STYLE_END__ to open spidertron's inventory.\n  •   __CONTROL_STYLE_BEGIN__Shift + Right-click__CONTROL_STYLE_END__ to reset.[/color][/font]__2__
 spidertron-enhancements-spidertron-remote-append-pathfinder=\n[font=default-semibold][color=255, 230, 192]  •   __CONTROL_STYLE_BEGIN__Alt + Left-click__CONTROL_STYLE_END__ to send spidertron with pathfinding.[/color][/font] 
 
 [cursor-message]
