@@ -1,0 +1,9 @@
+script.on_event("spidertron-enhancements-disconnect-remote",
+  function(event)
+    local player = game.get_player(event.player_index)
+    local remote = player.cursor_stack
+    if remote and remote.valid_for_read and remote.type == "spidertron-remote" then
+      remote.connected_entity = nil
+    end
+  end
+)
